-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.15.0
-
None
-
-
59836c96804855745bda4cb9090423d62f90ded0 (qt/qtbase/dev)
QAccessible::Help is not being sent to VoiceOver on MacOS.
If you insert the following method in 'Qt/5.15.0/Src/qtbase/src/plugins/platforms/cocoa/qcocoaaccessibilityelement.mm', you can send QAccessible::Help to VoiceOver as accessibilityHelp.
- (NSString *) accessibilityHelp { QAccessibleInterface *iface = QAccessible::accessibleInterface(axid); if (!iface || !iface->isValid()) return nil; if (iface->text(QAccessible::Help) != nil) { return iface->text(QAccessible::Help).toNSString(); } return nil; }
VO will automatically read the help message after a delay specified in VO setting.
Also you can read it manually with vo+shift+h.
For Gerrit Dashboard: QTBUG-84864 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
304241,1 | a11y: Implement accessibilityHelp on macOS | 5.15 | qt/qtbase | Status: NEW | +2 | 0 |