a11y: Implement accessibilityHelp on macOS

Note for manual testing: You can read it manually with vo+shift+h

Fixes: QTBUG-84864
Pick-to: 5.15
Change-Id: I5686e40642396db2fde685cf07b758acd29c6ee0
Reviewed-by: Jan Arve Sæther <jan-arve.saether@qt.io>